--- a/MyAndroidFrame/AndroidManifest.xml
+++ b/MyAndroidFrame/AndroidManifest.xml
@@ -39,6 +39,8 @@
             android:name="com.gyz.myandroidframe.dao.PluginsProvider"
             android:authorities="com.gyz.myandroidframe.dao" >
         </provider>
+        <service android:name="com.gyz.myandroidframe.service.DownLoadService_new" />
+        
     </application>
 
 </manifest>
